# LinusGPT

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: tensor.h
include/llm/: Embedding.h  LLM.h  Linear.h  MultiHeadAttention.h  RMSNorm.h  TransformerBlock.h  Vocab.h  crossEntropyLoss.h  embedding.h  llm.h  mha.h  transformer.h  vocab.h
include/math/: tensor.h  trieNode.h
include/util/: util.h
resources/: llmmodel.vocab
src/: main.cpp  tensor.cu
src/llm/: Embedding.cpp  LLM.cpp  Linear.cpp  MultiHeadAttention.cpp  RMSNorm.cpp  TransformerBlock.cpp  Vocab.cpp  embedding.cpp  llm.cpp  vocab.cpp
src/math/: tensor.cpp  tensor.cu
